Documentation Clean Up & overflow fix on containers.

--- a/_grid-it.scss
+++ b/_grid-it.scss
@@ -15,7 +15,7 @@ $grid-mobile-class: mobile !default;  // [string] Base class for mobile grid (is
 $grid-mobile-cols: 4 !default;  // [number] Number of cols in mobile grid
 $grid-set-border-box: false !default;  // [bool] Set box-sizing on column classes (assumes applied globally by default)
 
-// do not edit
+// internal - do not document
 $grid-half-gutter: $grid-gutter / 2;
 $grid-quarter-gutter: $grid-half-gutter / 2;
 
@@ -24,16 +24,18 @@ $grid-quarter-gutter: $grid-half-gutter / 2;
 // Grid functions //
 ////////////////////
 
-//**
-//* Calculate the percentage width by column span.
-//* @param  {num} $colNumber The number of columns to span
-//* @param  {num} $totalColumns The number to divide into (default: $grid-cols)
-//* @return {num} CSS Percentage
-//*/
+// Calculate the percentage width by column span.
+// @param  {num} $colNumber The number of columns to span
+// @param  {num} $totalColumns The number to divide into (default: $grid-cols)
+// @return {num} CSS Percentage
+
 @function gridCalc($colNumber, $totalColumns: $grid-cols) {
     @return percentage(($colNumber / $totalColumns));
 }
 
+// Internally used function (do not document)
+// @param {num} Number to convert into the english word
+// @return {string} The english word for $num
 @function convertNumberToWord($num) {
     $words: one,two,three,four,five,six,seven,eight,nine,ten,eleven,
         twelve,thirteen,fourteen,fifteen,sixteen,seventeen,eighteen,nineteen,
@@ -64,11 +66,14 @@ $grid-quarter-gutter: $grid-half-gutter / 2;
     }
 }
 
-//**
-//* Create a container out of any element.
-//*/
+// 
+// Create a container out of any element.
+// 
 @mixin grid-container($media: true) {
-    @if $grid-container-expand == false {
+    @if $grid-container-expand {
+        overflow: hidden;
+    }
+    @else {
         padding: 0 $grid-gutter;
     }
     
@@ -76,17 +81,23 @@ $grid-quarter-gutter: $grid-half-gutter / 2;
         @media only screen and (min-width: $grid-breakpoint) {
             margin: 0 auto;
             width: $grid-container-width;
-            @if $grid-container-expand == false { padding: 0; }
             max-width: $grid-max-width;
+            @if $grid-container-expand {
+                overflow: visible;
+            }
+            @else {
+                padding: 0;
+            }
         }
     }
 }
 
-//**
-//* Create a row out of any element.
-//* @param {bool} $half-gutter Cut the gutter on each column within in half (acts on all direct decendents)
-//* @param {bool} $collapse Remove the gutter on columns completely
-//*/
+//
+// Create a row out of any element.
+// @param {bool} $half-gutter Cut the gutter on each column within in half (acts on all direct decendents)
+// @param {bool} $collapse Remove the gutter on columns completely
+// @param {bool} $has-mobile Whether or not the row contains mobile columns
+//
 @mixin grid-row($half-gutter: false, $collapse: false, $has-mobile: false, $media: true) {
     display: block;
     clear: both;
@@ -117,16 +128,16 @@ $grid-quarter-gutter: $grid-half-gutter / 2;
     }
 }
 
-//**
-//* Create a column out of any element.
-//* @param {num} $grid-cols Number of columns the element should span (default is max)
-//* @param {num} $offset Number of columns the element should be offset by
-//* @param {num} $push Push the element by x number of columns
-//* @param {num} $pull Pull the element by x number of columns
-//* @param {bool} $centered Center the column in the row (there should only be one)
-//* @param {bool} $half-gutter Use only a half gutter on this specific column
-//* @param {num} $mobile-cols Number of columns to span on mobile, if any
-//*/
+//
+// Create a column out of any element.
+// @param {num} $grid-cols Number of columns the element should span (default is max)
+// @param {num} $offset Number of columns the element should be offset by
+// @param {num} $push Push the element by x number of columns
+// @param {num} $pull Pull the element by x number of columns
+// @param {bool} $centered Center the column in the row (there should only be one)
+// @param {bool} $half-gutter Use only a half gutter on this specific column
+// @param {num} $mobile-cols Number of columns to span on mobile, if any
+//
 @mixin grid-col($columns: $grid-cols, $offset: 0, $push: 0, $pull: 0, $centered: false, $half-gutter: false, $mobile-cols: 0) {
     display: block;
     position: relative;
@@ -166,11 +177,11 @@ $grid-quarter-gutter: $grid-half-gutter / 2;
     }
 }
 
-//**
-//* Create column widths, offset, push, and pull classes within a given context.
-//* @param {num} $num-cols The number of columns to build classes to
-//* @param {string} $prepend A name to prepend to each grid class (a '-' separates this from the class name)
-//*/
+//
+// Create column widths, offset, push, and pull classes within a given context.
+// @param {num} $num-cols The number of columns to build classes to
+// @param {string} $prepend A name to prepend to each grid class (a '-' separates this from the class name)
+//
 @mixin grid-classes($num-cols: $grid-cols, $prepend: false) {
     @if $prepend { $prepend: $prepend + "-"; }
     @else { $prepend: ""; }
@@ -234,7 +245,7 @@ $grid-quarter-gutter: $grid-half-gutter / 2;
     display: none !important;
 }
 
-// mobile breakpoint
+// desktop breakpoint
 @media only screen and (min-width: $grid-breakpoint) {
     // mobile classes
     .#{$grid-mobile-class}-show {
@@ -256,7 +267,12 @@ $grid-quarter-gutter: $grid-half-gutter / 2;
     .#{$grid-container-class} {
         margin: 0 auto;
         width: $grid-container-width;
-        @if $grid-container-expand == false { padding: 0; }
+        @if $grid-container-expand {
+            overflow: visible;
+        }
+        @else {
+            padding: 0;
+        }
     }
 
     .#{$grid-row-class} {
